<resources>
    <string name="app_name">ALOREM</string>
    <string name="hello_world">HELLO WORLD !</string>
    <string name="accent_color">ACCENT COLOR</string>
    <string name="success_color">SUCCESS COLOR</string>
    <string name="primary_color">PRIMARY COLOR</string>
    <string name="advertising_color">ADVERTISING COLOR</string>
    <string name="primary_100">PRIMARY 100</string>
    <string name="primary_500">PRIMARY 500</string>
    <string name="primary_700">PRIMARY 700</string>

    <string name="OK">OK</string>
    <string name="NOK">NOK</string>
    <string name="conforme">CONFORME</string>
    <string name="non_conforme">NON CONFORME</string>
    <string name="anomalie">ANOMALIE</string>
    <string name="mineure">MINEURE</string>
    <string name="majeure">MAJEURE</string>

    <string name="utilisateur_menu">UTILISATEUR</string>
    <string name="nom_menu">nom :</string>
    <string name="prenom_menu">prénom :</string>
    <string name="email_menu">email :</string>
    <string name="grv_menu">GRV</string>
    <string name="change_user_menu">Editeur utilisateur</string>
    <string name="back">RETOUR</string>
    <string name="validate">VALIDER</string>
    <string name="Defaut_ladder_GRV_template">5.0 X</string>

    <string name="mettre_a_jour_registration">MAJ</string>
    <string name="nouveau_utilisateur_registration">NOUVEAU</string>
    <string name="liste_utilisateur_registration">LISTE</string>
    <string name="supprimer_registration">SUPPRIMER</string>
    <string name="utilisateur_actif_registration">UTILISATEUR ACTIF</string>

    <string name="nouvel_utilisateur_create_user">NOUVEL UTILISATEUR</string>
    <string name="valider_create_user">VALIDER</string>
    <string name="nom_menu_create_user">nom</string>
    <string name="prenom_menu_create_user">prénom</string>
    <string name="email_menu_create_user">email</string>
    <string name="error_create_user">L\'enregistrement a échoué</string>
    <string name="name_field_empty_create_user">Champ nom vide</string>
    <string name="forname_field_empty_create_user">Champ prénom vide</string>
    <string name="email_field_empty_create_user">Champ email vide</string>

    <string name="mettre_a_jour_update_user">METTRE A JOUR UTILISATEUR</string>
    <string name="mettre_a_jour_update_user_btn">METTRE A JOUR</string>

    <string name="controle_GRV_GRV_main">Contrôle GRV</string>
    <string name="controle_report_report_main">RAPPORTS DE CONTROLE</string>

    <string name="controle_report_report_subtitle">Liste des rapports</string>
    <string name="controle_report_export_subtitle">Documents disponibles</string>

    <string name="title_exemple_child_control_grv">INFORMATION DE LA CUVE</string>
    <string name="control_grv_item_card_title">CONTRÔLE EN COURS :</string>

    <string name="control_grv_control_step_wrong_report_number">MAUVAIS N° RAPPORT</string>

    <string name="control_grv_checkpoint_step0_title">FICHE DE CONTROLE GRV</string>
    <string name="control_grv_checkpoint_report_number">N° RAPPORT</string>
    <string name="control_grv_checkpoint_customer_name">NOM CLIENT</string>
    <string name="control_grv_checkpoint_tank_category">TYPE CUVE</string>
    <string name="control_grv_checkpoint_customer_serial_number">N° SERIE CLIENT</string>
    <string name="control_grv_checkpoint_alorem_serial_number">N° ALOREM</string>

    <string name="control_grv_checkpoint_step1_title">DOCUMENTATION ET MARQUAGE REGLEMENTAIRE</string>
    <string name="control_grv_checkpoint_plate_adr">Plaque ADR</string>
    <string name="control_grv_checkpoint_alorem_plate">Plaque ALOREM</string>
    <string name="control_grv_checkpoint_booklet_pouch">Pochette Livret</string>
    <string name="control_grv_checkpoint_user_manual">Manuel Utilisateur</string>
    <string name="control_grv_checkpoint_instruction_of_use">Instruction d\'utilisation</string>
    <string name="control_grv_checkpoint_certificates_adr">Certificat ADR</string>
    <string name="control_grv_checkpoint_grounding_adhesive">Adhésif Masse de terre</string>
    <string name="control_grv_checkpoint_conformity_certificate_marking">Marquage réglementaire</string>

    <string name="control_grv_checkpoint_step2_title">INFORMATION PLAQUE</string>
    <string name="control_grv_checkpoint_marque_principale">Marque principale</string>
    <string name="control_grv_checkpoint_tare">Tare (kg)</string>
    <string name="control_grv_checkpoint_material">Matériau</string>
    <string name="control_grv_checkpoint_capacity_20">Capacité 20°C</string>
    <string name="control_grv_checkpoint_gross_mass">Masse Brut (kg)</string>
    <string name="control_grv_checkpoint_fabrication_date">Date de fabrication</string>
    <string name="control_grv_checkpoint_shell_thickness">Epaisseur de la cuve (mm)</string>
    <string name="control_grv_checkpoint_pictogram_stacking">pictogramme gerbage</string>
    <string name="control_grv_checkpoint_weight_stacking">Poids gerbage (kg)</string>

    <string name="control_grv_checkpoint_step3_title">ANALYSE DE LA RETENTION</string>
    <string name="control_grv_checkpoint_bottom_retention_face">Retention face avant</string>
    <string name="control_grv_checkpoint_bottom_retention_right">Retention face droite</string>
    <string name="control_grv_checkpoint_bottom_retention_left">Retention face gauche</string>
    <string name="control_grv_checkpoint_bottom_retention_behind">Retention face arrière</string>
    <string name="control_grv_checkpoint_upper_retention">Retention partie haute</string>
    <string name="control_grv_checkpoint_lifting_rings">Anneaux de levage</string>
    <string name="control_grv_checkpoint_forklift_pass">Passage de fourche</string>
    <string name="control_grv_checkpoint_dashboard">Tableau de bord</string>
    <string name="control_grv_checkpoint_unauthorized_repair">Réparation non autorisée</string>

    <string name="control_grv_checkpoint_step4_title">INSPECTION INTERNE DE LA CUVE</string>
    <string name="control_grv_checkpoint_internal_na">INSPECTION N/A</string>
    <string name="control_grv_checkpoint_internal_ok">INSPECTION INTERNE</string>
    <string name="control_grv_checkpoint_internal_clean">PROPRE</string>
    <string name="control_grv_checkpoint_internal_object_inside">OBJET DANS LA CUVE</string>
    <string name="control_grv_checkpoint_internal_pollution">POLLUTION</string>

    <string name="control_grv_checkpoint_step5_title">MESURE D\'EPAISSEUR</string>
    <string name="control_grv_checkpoint_epaisseur_na">CONTROLE EPAISSEUR N/A</string>
    <string name="control_grv_checkpoint_epaisseur_min_side_front">EPAISSEUR MIN. FACE AVANT</string>
    <string name="control_grv_checkpoint_epaisseur_min_side_back">EPAISSEUR MIN. FACE ARRIERE</string>
    <string name="control_grv_checkpoint_epaisseur_min_side_right">EPAISSEUR MIN. FACE DROITE</string>
    <string name="control_grv_checkpoint_epaisseur_min_side_left">EPAISSEUR MIN. FACE GAUCHE</string>
    <string name="control_grv_checkpoint_epaisseur_side_front_result_1">EPAISSEUR RESULTAT 1 FACE AVANT</string>
    <string name="control_grv_checkpoint_epaisseur_side_front_result_2">EPAISSEUR RESULTAT 2 FACE AVANT</string>
    <string name="control_grv_checkpoint_epaisseur_side_front_result_3">EPAISSEUR RESULTAT 3 FACE AVANT</string>
    <string name="control_grv_checkpoint_epaisseur_side_front_result_4">EPAISSEUR RESULTAT 4 FACE AVANT</string>
    <string name="control_grv_checkpoint_epaisseur_side_front_result_5">EPAISSEUR RESULTAT 5 FACE AVANT</string>
    <string name="control_grv_checkpoint_epaisseur_side_back_result_1">EPAISSEUR RESULTAT 1 FACE ARRIERE</string>
    <string name="control_grv_checkpoint_epaisseur_side_back_result_2">EPAISSEUR RESULTAT 2 FACE ARRIERE</string>
    <string name="control_grv_checkpoint_epaisseur_side_back_result_3">EPAISSEUR RESULTAT 3 FACE ARRIERE</string>
    <string name="control_grv_checkpoint_epaisseur_side_back_result_4">EPAISSEUR RESULTAT 4 FACE ARRIERE</string>
    <string name="control_grv_checkpoint_epaisseur_side_back_result_5">EPAISSEUR RESULTAT 5 FACE ARRIERE</string>
    <string name="control_grv_checkpoint_epaisseur_side_right_result_1">EPAISSEUR RESULTAT 1 FACE DROITE</string>
    <string name="control_grv_checkpoint_epaisseur_side_right_result_2">EPAISSEUR RESULTAT 2 FACE DROITE</string>
    <string name="control_grv_checkpoint_epaisseur_side_right_result_3">EPAISSEUR RESULTAT 3 FACE DROITE</string>
    <string name="control_grv_checkpoint_epaisseur_side_right_result_4">EPAISSEUR RESULTAT 4 FACE DROITE</string>
    <string name="control_grv_checkpoint_epaisseur_side_right_result_5">EPAISSEUR RESULTAT 5 FACE DROITE</string>
    <string name="control_grv_checkpoint_epaisseur_side_left_result_1">EPAISSEUR RESULTAT 1 FACE GAUCHE</string>
    <string name="control_grv_checkpoint_epaisseur_side_left_result_2">EPAISSEUR RESULTAT 2 FACE GAUCHE</string>
    <string name="control_grv_checkpoint_epaisseur_side_left_result_3">EPAISSEUR RESULTAT 3 FACE GAUCHE</string>
    <string name="control_grv_checkpoint_epaisseur_side_left_result_4">EPAISSEUR RESULTAT 4 FACE GAUCHE</string>
    <string name="control_grv_checkpoint_epaisseur_side_left_result_5">EPAISSEUR RESULTAT 5 FACE GAUCHE</string>

    <string name="control_grv_checkpoint_step6_title">TEST D\'ETANCHEITE ET CONCLUSION</string>
    <string name="control_grv_checkpoint_etancheite_conforme_1">RESULTAT ETANCHEITE 1</string>
    <string name="control_grv_checkpoint_etancheite_date_1">DATE 1</string>
    <string name="control_grv_checkpoint_etancheite_bar_1">BAR 1</string>
    <string name="control_grv_checkpoint_etancheite_conforme_2">RESULTAT ETANCHEITE 2</string>
    <string name="control_grv_checkpoint_etancheite_date_2">DATE 2</string>
    <string name="control_grv_checkpoint_etancheite_bar_2">BAR 2</string>
    <string name="control_grv_checkpoint_conclusion_running_equipment">FONCTIONNEMENT EQUIPEMENT DE SERVICE</string>
    <string name="control_grv_checkpoint_main_conclusion">CONCLUSION DU CONTROLE PERIODIQUE</string>"
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>