<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_four_state_item_card_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/utilisateur_menu"
        android:textColor="@drawable/text_color_item_selector"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1_four_state_item_card_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2_four_state_item_card_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup_four_state_item_card_data"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/title_four_state_item_card_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_1_four_state_item_card_data"
        app:layout_constraintTop_toTopOf="@+id/title_four_state_item_card_data"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConforme_four_state_item_card_data"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:text="@string/OK"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="28dp"
            app:icon="@drawable/ic_check_ok"
            android:backgroundTint="@drawable/pill_background_ok"
            android:textColor="@drawable/pill_text"
            app:iconGravity="textStart"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNonConforme_four_state_item_card_data"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:text="@string/NOK"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="28dp"
            app:icon="@drawable/ic_close"
            android:backgroundTint="@drawable/pill_background_grey"
            android:textColor="@drawable/pill_text"
            app:iconGravity="textStart"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup2_four_state_item_card_data"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_2_four_state_item_card_data"
        app:layout_constraintTop_toBottomOf="@+id/toggleGroup_four_state_item_card_data"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_anom_four_state_item_card_data"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:backgroundTint="@drawable/pill_background_anom"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/anomalie"
            android:textAllCaps="false"
            android:textColor="@drawable/pill_text"
            android:textSize="11sp"
            android:textStyle="bold"
            app:cornerRadius="28dp"
            app:icon="@drawable/ic_check_ok"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_minor_four_state_item_card_data"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:backgroundTint="@drawable/pill_background_minor"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/mineure"
            android:textAllCaps="false"
            android:textColor="@drawable/pill_text"
            android:textSize="11sp"
            android:textStyle="bold"
            app:cornerRadius="28dp"
            app:icon="@drawable/ic_close"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_major_four_state_item_card_data"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:backgroundTint="@drawable/pill_background_major"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/majeure"
            android:textAllCaps="false"
            android:textColor="@drawable/pill_text"
            android:textSize="11sp"
            android:textStyle="bold"
            app:cornerRadius="28dp"
            app:icon="@drawable/ic_close"
            app:iconGravity="textStart" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


</androidx.constraintlayout.widget.ConstraintLayout>