<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/background"
        tools:context=".activity.MainActivity">

        <ImageView
            android:id="@+id/imageView_ALOREM"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/full_logo_alorem"
            app:layout_constraintDimensionRatio="3:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/menu_guideline_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/menu_guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/menu_guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85"/>

        <Button
            android:id="@+id/newUser_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:padding="10dp"
            android:text="@string/nouveau_utilisateur_registration"
            app:layout_constraintBottom_toTopOf="@+id/menu_guideline_2"
            app:layout_constraintEnd_toStartOf="@+id/updateUser_menu"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/updateUser_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:padding="10dp"
            android:text="@string/mettre_a_jour_registration"
            app:layout_constraintBottom_toTopOf="@+id/menu_guideline_2"
            app:layout_constraintEnd_toStartOf="@+id/listUser_menu"
            app:layout_constraintStart_toEndOf="@+id/newUser_menu" />

        <Button
            android:id="@+id/listUser_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:padding="10dp"
            android:text="@string/liste_utilisateur_registration"
            app:layout_constraintBottom_toTopOf="@+id/menu_guideline_2"
            app:layout_constraintEnd_toStartOf="@+id/deleteUser_menu"
            app:layout_constraintStart_toEndOf="@+id/updateUser_menu" />

        <Button
            android:id="@+id/deleteUser_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:padding="10dp"
            android:text="@string/supprimer_registration"
            app:layout_constraintBottom_toTopOf="@+id/menu_guideline_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/listUser_menu" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/registration_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/primary_700"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>