<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/background"
        tools:context=".activity.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/menu_guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/menu_guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/menu_guideline_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.32"/>

        <ImageView
            android:id="@+id/imageView_ALOREM"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/full_logo_alorem"
            app:layout_constraintDimensionRatio="3:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userTitle_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utilisateur_menu"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/menu_guideline_3" />


        <TextView
            android:id="@+id/nameTitle_menu"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/nom_menu"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/userTitle_menu"
            app:layout_constraintTop_toBottomOf="@+id/userTitle_menu" />


        <TextView
            android:id="@+id/forenameTitle_menu"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/prenom_menu"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/nameTitle_menu"
            app:layout_constraintTop_toBottomOf="@+id/nameTitle_menu" />

        <TextView
            android:id="@+id/emailTitle_menu"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email_menu"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/nameTitle_menu"
            app:layout_constraintTop_toBottomOf="@+id/forenameTitle_menu" />

        <TextView
            android:id="@+id/nameMenu_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/forenameTitle_menu"
            app:layout_constraintTop_toBottomOf="@+id/userTitle_menu" />

        <TextView
            android:id="@+id/forenameMenu_menu"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/nameMenu_menu"
            app:layout_constraintTop_toBottomOf="@+id/nameTitle_menu" />

        <TextView
            android:id="@+id/emailMenu_menu"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/forenameMenu_menu"
            app:layout_constraintTop_toBottomOf="@+id/forenameTitle_menu" />

        <ImageView
            android:id="@+id/GRVControlBtn_menu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/iaphotologo"
            android:padding="30dp"
            android:src="@drawable/baseline_factory_24"
            app:layout_constraintBottom_toTopOf="@+id/menu_guideline_2"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/menu_guideline_1" />

        <Button
            android:id="@+id/userChangeBtn_menu"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:text="@string/change_user_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>